<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_everything"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:padding="6dp"
                    android:text="@string/category_everything"
                    android:textSize="12sp"></Button>

                <Button
                    android:id="@+id/btn_sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:padding="6dp"
                    android:text="@string/category_sport"
                    android:textSize="12sp"></Button>

                <Button
                    android:id="@+id/btn_business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:padding="6dp"
                    android:text="@string/category_business"
                    android:textSize="12sp"></Button>

                <Button
                    android:id="@+id/btn_entertainment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:padding="6dp"
                    android:text="@string/category_entertainment"
                    android:textSize="12sp"></Button>

                <Button
                    android:id="@+id/btn_general"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:padding="6dp"
                    android:text="@string/category_general"
                    android:textSize="12sp"></Button>

                <Button
                    android:id="@+id/btn_health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:padding="6dp"
                    android:text="@string/category_health"
                    android:textSize="12sp"></Button>

                <Button
                    android:id="@+id/btn_science"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:padding="6dp"
                    android:text="@string/category_science"
                    android:textSize="12sp"></Button>

                <Button
                    android:id="@+id/btn_tehnology"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:padding="6dp"
                    android:text="@string/category_tehnology"
                    android:textSize="12sp"></Button>
            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>