<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_title"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/editTextName"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_name"
            android:textColor="@android:color/black"
            android:background="@android:color/transparent"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:hint="@string/placeholder_email"
            android:textColor="@android:color/black"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="match_parent"
            android:textSize="22sp"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_message"
            android:textColor="@android:color/black"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_image_button"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:padding="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/selectedImageNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_news_button"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:padding="20dp"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</RelativeLayout>
